--- a/templates/core/upload_wallpaper.html
+++ b/templates/core/upload_wallpaper.html
@@ -32,7 +32,7 @@
                         </div>
                         
                         <div class="mb-3">
-                            <label for="price" class="form-label">Price ($)</label>
+                            <label for="price" class="form-label">Price (₹)</label>
                             <input type="number" class="form-control" id="price" name="price" min="0" step="0.01" value="0">
                             <div class="form-text">Set to 0 for free wallpaper</div>
                         </div>
