--- a/templates/core/password_reset.html
+++ b/templates/core/password_reset.html
@@ -1,11 +1,6 @@
 {% extends 'core/base.html' %}
-{% load static %}
 
-{% block title %}Login{% endblock %}
-
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/login.css' %}">
-{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
@@ -13,7 +8,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="text-center">Login</h3>
+                    <h3 class="text-center">Reset Password</h3>
                 </div>
                 <div class="card-body">
                     {% if messages %}
@@ -27,12 +22,9 @@
                         {% csrf_token %}
                         {{ form.as_p }}
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary">Login</button>
+                            <button type="submit" class="btn btn-primary">Reset Password</button>
                         </div>
                     </form>
-                    <div class="text-center mt-3">
-                        <a href="{% url 'password_reset_request' %}">Forgot Password?</a>
-                    </div>
                 </div>
             </div>
         </div>
